# process

./: README.md  process-message.cabal  solution.md
main/: process-cli.hs  process.hs
src/: Process.hs
src/Process/: Data.hs  Logging.hs  Sender.hs  Time.hs
test/: test.hs
test/Test/Process/: *haskell-process-log*  Gen.hs  Sender.hs
