name:                  process-message
version:               0.0.1
license:               BSD3
author:                Tim McGilchrist <timmcgil@gmail.com>
maintainer:            Tim McGilchrist <timmcgil@gmail.com>
copyright:             (c) 2017 Tim McGilchrist.
synopsis:              process-message
category:              System
cabal-version:         >= 1.8
build-type:            Simple
description:           process-message

library
  build-depends:
                       base                            >= 3          && < 5
                     , binary                          == 0.8.*
                     , containers                      == 0.5.*
                     , clock                           == 0.7.*
                     , distributed-process             == 0.7.*
                     , either                          == 4.4.*
                     , network                         >= 2.6.2      && < 2.7
                     , network-transport               == 0.4.*
                     , network-transport-tcp           == 0.5.*
                     , text                            == 1.2.*
                     , random                          == 1.1.*
                     , time                            >= 1.4        && < 1.7

                     -- Typically I'd have ranges here rather than such strict versions
                     -- for now I'm locking this down to prevent issues.

  ghc-options:
                       -Wall

  hs-source-dirs:
                       src

  exposed-modules:
                       Process
                     , Process.Data
                     , Process.Logging
                     , Process.Time
                     , Process.Sender

executable process
  main-is:             process-cli.hs
  build-depends:       base                            >= 3          && < 5
                     , process-message
                     , optparse-applicative            >= 0.11       && < 0.15
                     , text                            == 1.2.*

  hs-source-dirs:      main
  ghc-options:         -Wall

test-suite test
  type:                exitcode-stdio-1.0

  main-is:             test.hs

  ghc-options:         -Wall -threaded -O2

  hs-source-dirs:
                       test

  build-depends:
                       base                            >= 3          && < 5
                     , process-message
                     , hedgehog                        == 0.5.*
                     , network
                     , distributed-process
                     , network-transport
                     , network-transport-tcp
